tests/analyzer/errors/block_labelled.rv
fn main() {
    {
        break :b
    }

    var a: int = :value {
        {
            var trash: float = 4.5
            break :value trash
        }
        
        break 5
    }
}
